--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
 
     <color name="_101010">#101010</color>
     <color name="_606060">#606060</color>
+    <color name="_D70000">#D70000</color>
+    <color name="_F3F3F3">#F3F3F3</color>
+    <color name="_000000">#000000</color>
 </resources>
