--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,16 @@
             app:menu="@menu/menu_bottom_navigation" />
 
         <View
+            android:id="@+id/divider_line"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/_606060"
-            android:layout_above="@id/bottom_navigation"/>
+            android:layout_above="@id/bottom_navigation"
+            android:background="@color/_606060" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/main_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/divider_line" />
     </RelativeLayout>
 </layout>
