--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,10 @@
         <item name="android:textColor">@color/_101010</item>
         <item name="android:textSize">11sp</item>
     </style>
+
+    <style name="mToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- Toolbar 标题文字颜色 包括navigation search等icon颜色-->
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:padding">0dp</item>
+    </style>
 </resources>
