--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,12 @@
             android:layout_above="@id/bottom_navigation"
             android:background="@color/_606060" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/main_viewpager"
+        <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="com.zysc.window.WindowNavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/divider_line" />
+            android:layout_above="@id/divider_line"
+            app:defaultNavHost="true" />
     </RelativeLayout>
 </layout>
