1.完成首页Banner请求联调

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="_D70000">#D70000</color>
     <color name="_F3F3F3">#F3F3F3</color>
     <color name="_000000">#000000</color>
+    <color name="_5FB9EB">#5FB9EB</color>
 </resources>
